force-app/main/default/objects/OneCRM__Metadata_event__e/OneCRM__Metadata_event__e.object-meta.xml
<CustomObject>
    <label>Metadata event</label>
    <pluralLabel>Metadata events</pluralLabel>
</CustomObject>