force-app/main/default/objects/OneCRM__Metadata_event__e/fields/OneCRM__Metadata_Record__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Metadata_Record__c</fullName>
    <label>Metadata Record</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>