force-app/main/default/objects/OneCRM__Metadata_event__e/fields/OneCRM__Metadata_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Metadata_Record_Id__c</fullName>
    <label>Metadata Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>