force-app/main/default/objects/OneCRM__Metadata_event__e/fields/OneCRM__Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>