force-app/main/default/objects/OneCRM__Metadata_event__e/fields/OneCRM__Results__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Results__c</fullName>
    <label>Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>